[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "grad: Marks tests which perform 'gradcheck' evaluations, this can be slow.",
]


[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = false


[tool.coverage.run]
plugins = ["covdefaults"]
source = ["./src"]

[tool.coverage.report]
fail_under = 80
