[metadata]
name = tad_dftd3
version = 0.1.1
description = Torch autodiff DFT-D3 implementation
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache-2.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls =
    Documentation = https://tad-dftd3.readthedocs.io/en/latest/
    Source Code = https://github.com/dftd3/tad-dftd3
    Tracker = https://github.com/dftd3/tad-dftd3/issues

[options]
packages = find:
install_requires =
    numpy
    torch
python_requires = >=3.8
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
dev =
    black
    covdefaults
    coverage
    mypy
    pre-commit
    pylint
    pytest
    pytest-random-order
    tox

[options.package_data]
tad_dftd3 =
    py.typed
    *.npy
