[metadata]
name = tad_dftd3
version = attr: tad_dftd3.__version__.__version__
description = Torch autodiff DFT-D3 implementation
long_description = file: README.rst
long_description_content_type = text/x-rst
author = "Sebastian Ehlert, Marvin Friede"
license = Apache-2.0
license_files = LICENSE
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Chemistry
    Typing :: Typed
project_urls =
    Documentation = https://tad-dftd3.readthedocs.io/en/latest/
    Source Code = https://github.com/dftd3/tad-dftd3
    Tracker = https://github.com/dftd3/tad-dftd3/issues

[options]
packages = find:
install_requires =
    numpy<2
    tad-mctc==0.5.3
    torch>=1.11,<3
python_requires = >=3.8, <3.13
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
dev =
    black
    covdefaults
    mypy
    pre-commit
    pylint
    pytest
    pytest-cov
    pytest-random-order
    pytest-xdist
    tox
tox =
    covdefaults
    pytest
    pytest-cov
    pytest-random-order
    pytest-xdist

[options.package_data]
tad_dftd3 =
    py.typed
    **/*.npy
    **/*.npz
    **/*.pt
